--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -22,12 +22,11 @@
 {
     [Inject]
     public IBugService BugService { get; set; }
+    
     public List<Bug> Bugs { get; set; }
 
     protected override void OnInitialized()
     {
-        Bugs = BugService.GetBugs()
-            .OrderBy(x => x.Priority)
-            .ToList<Bug>();
+        Bugs = BugService.GetBugs().OrderBy(x => x.Priority).ToList();
     }
 }
